    - Added entity validation to more processes to avoid potential issues
    - Removed restriction that beacon_power_usage_multiplier and crafting_machine_energy_usage_multiplier must match for a given quality
  Bugfixes:
    - Fixed that quality would not affect power draw of beacons. I think.
    - Fixed that source entities were selectable in the entity editor mode instead of the beacon
---------------------------------------------------------------------------------------------------
Version: 1.3.14
Date: 2025-12-21
  Changes:
    - Added custom tooltip fields
---------------------------------------------------------------------------------------------------
Version: 1.3.13
Date: 2025-10-30
  Bugfixes:
    - Fixed a crash when indexing a nonexistant value
---------------------------------------------------------------------------------------------------
Version: 1.3.12
Date: 2025-10-30
  Changes:
    - Updated validity check function to be more reliable and less likely to crash
---------------------------------------------------------------------------------------------------
Version: 1.3.11
Date: 2025-10-30
  Bugfixes:
    - Fixed a crash since the validity funciton... doesn't check validity
---------------------------------------------------------------------------------------------------
Version: 1.3.10
Date: 2025-10-18
  Bugfixes:
    - Blanket bugfixes due to malformed migration data
    - Fixed issues surrounding orphan entities from malformed migration data (see log file to find out how many ninjas were removed)
---------------------------------------------------------------------------------------------------
Version: 1.3.9
Date: 2025-09-27
  Bugfixes:
    - Fixed a crash when trying to migrate entities
---------------------------------------------------------------------------------------------------
Version: 1.3.8
Date: 2025-08-28
  Bugfixes:
    - Fixed a crash introduced in the last version