@@ -9,6 +9,7 @@ Date: ????
   Bugfixes:
     - Fixed that quality would not affect power draw of beacons. I think.
     - Fixed that source entities were selectable in the entity editor mode instead of the beacon
+    - Fixed that a nonexistant effect_reciever would default to all settings being enabled (not desired!)
 ---------------------------------------------------------------------------------------------------
 Version: 1.3.14
 Date: 2025-12-21
